--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ install:
   - composer self-update
   - composer install --prefer-dist --optimize-autoloader
 script:
-  - composer test
+  - composer coverage
 cache:
   directories:
     - $HOME/.composer/cache/files
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
