Composer Versionen fixiert

--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     ],
     "require": {
         "php": "^7.1",
-        "dgame/php-ensurance": "^1.0",
+        "dgame/php-ensurance": "^1.0 || ^2.0",
         "seld/jsonlint": "^1.6",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
