--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": "^7.1",
         "dgame/php-ensurance": "^1.0 || ^2.0",
         "seld/jsonlint": "^1.6",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "guzzlehttp/psr7": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
