--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0",
         "phpstan/phpstan": "^0.10.0",
+        "squizlabs/php_codesniffer": "^3.3.0",
         "phpstan/phpstan-phpunit": "^0.10.0"
     },
     "autoload": {
@@ -37,6 +38,7 @@
             "phpunit"
         ],
         "phpstan": "./vendor/bin/phpstan analyse . --ansi",
+        "phpcs": "./vendor/bin/phpcs ",
         "coverage": [
             "phpunit --coverage-clover=coverage.xml"
         ]
