Added phpcs and phpstan to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ install:
   - composer install --prefer-dist --optimize-autoloader
 script:
   - composer coverage
+  - composer phpcs
+  - composer phpstan
 cache:
   directories:
     - $HOME/.composer/cache/files
