--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "dgame/php-ensurance": "^1.0 || ^2.0",
         "seld/jsonlint": "^1.6",
         "psr/http-message": "^1.0",
-        "guzzlehttp/psr7": "^1.4"
+        "guzzlehttp/psr7": "^1.4",
+        "ext-json": "*",
+        "dgame/php-extraction": "^0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
