--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": "^7.1",
+        "ext-json": "*",
         "dgame/php-ensurance": "^1.0 || ^2.0",
-        "seld/jsonlint": "^1.6",
         "psr/http-message": "^1.0",
         "guzzlehttp/psr7": "^1.4"
     },
