--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,17 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1 || ^8.0",
         "ext-json": "*",
-        "dgame/php-ensurance": "^1.0 || ^2.0",
+        "dgame/php-ensurance": "^2.0",
         "psr/http-message": "^1.0",
         "guzzlehttp/psr7": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
-        "phpstan/phpstan": "^0.10.0",
+        "phpunit/phpunit": "^9.0",
+        "phpstan/phpstan": "^0.12.33",
         "squizlabs/php_codesniffer": "^3.3.0",
-        "phpstan/phpstan-phpunit": "^0.10.0"
+        "phpstan/phpstan-phpunit": "^0.12.13"
     },
     "autoload": {
         "classmap": [
