--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.1 || ^8.0",
+        "php": "^7.1 || >=8.0",
         "ext-json": "*",
         "dgame/php-ensurance": "^2.0",
         "psr/http-message": "^1.0",
