--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,17 @@
         }
     ],
     "require": {
-        "php": "^7.1 || ^8.0",
+        "php": "^8.0",
         "ext-json": "*",
         "dgame/php-ensurance": "^2.0",
-        "psr/http-message": "^1.0",
-        "guzzlehttp/psr7": "^2.0"
+        "psr/http-message": "^2.0",
+        "guzzlehttp/psr7": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "phpstan/phpstan": "^0.12.33",
+        "phpstan/phpstan": "^2.1",
         "squizlabs/php_codesniffer": "^3.3.0",
-        "phpstan/phpstan-phpunit": "^0.12.13"
+        "phpstan/phpstan-phpunit": "^2.0"
     },
     "autoload": {
         "classmap": [
